--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <body style="background-color: #000;">
-        <iframe id="tixtree" src="https://www.tixtree.com/e/summer-23-aae2f43ba085/widget" width="100%" height="650px" frameborder="0"></iframe>
+        <iframe id="tixtree" src="https://www.tixtree.com/e/summer-23-aae2f43ba085/widget" width="100vw" height="650px" frameborder="0"></iframe>
     </body>
 </html>
