--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-    <body style="background-color: #000;">
-        <iframe id="tixtree" src="https://www.tixtree.com/e/summer-23-aae2f43ba085/widget" width="100vw" height="650px" frameborder="0"></iframe>
+    <body style="background-color: #000; width: 100%;">
+        <iframe id="tixtree-widget" src="https://www.tixtree.com/e/isla-contoy-tour-49bbe29dad9f/widget?v=1.2" width="100%" height="650px" frameborder="0"></iframe>
+<script>const cb=Date.now(),iframe=document.getElementById("tixtree-widget");iframe.src=`https://www.tixtree.com/e/isla-contoy-tour-49bbe29dad9f/widget?cb=${cb}`;</script>
     </body>
 </html>
