--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
-    <body style="background-color: #000; width: 100%;">
-<iframe id="tixtree-widget" src="https://www.tixtree.com/e/isla-contoy-tour-49bbe29dad9f/widget" width="100%" height="650px" frameborder="0"></iframe><script>const cb = Date.now();iframe = document.getElementById("tixtree-widget");iframe.src = `https://www.tixtree.com/e/isla-contoy-tour-49bbe29dad9f/widget?cb=${cb}`;</script>    </body>
+    <body style="background-color: #000;">
+        <script id="tixtree-widget" src="https://www.tixtree.com/widgets/tixtree.js" data-type="event" data-id="party-like-theres-no-tomorrow-cf15cce2d873"></script>
+    </body>
 </html>
