--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <body style="background-color: #000;">
-        <script id="tixtree-widget" src="https://www.tixtree.com/widgets/tixtree.js" data-type="event" data-id="party-like-theres-no-tomorrow-cf15cce2d873"></script>
+        <script id="tixtree-widget" src="https://www.tixtree.com/widgets/tixtree.js" data-type="events" data-id="tixtree"></script>
     </body>
 </html>
