--- a/box-office.html
+++ b/box-office.html
@@ -1,6 +1,8 @@
 <html>
   <head></head>
   <body>
-    <script id="tixtree-widget" src="https://www.tixtree.com/widgets/tixtree.js" data-type="events" data-id="tixtree"></script>
+    <div id="tixtree-wrapper">
+      <script id="tixtree-script" src="https://www.tixtree.com/widgets/tixtree.js" data-type="events" data-id="tixtree"></script>
+    </div>
   </body>
 </html>
