--- a/event.html
+++ b/event.html
@@ -1,8 +1,6 @@
 <html>
   <head></head>
   <body>
-    <div id="tixtree-wrapper">
-      <script id="tixtree-script" src="https://www.tixtree.com/widgets/tixtree.js" data-type="event" data-id="party-like-theres-no-tomorrow-cf15cce2d873"></script>
-    </div>
+    <div id="tixtree-wrapper"><script id="tixtree-script" src="https://www.tixtree.com/widgets/tixtree.js" data-type="event" data-id="pique-spring-edition-9cab08fccb13"></script></div>
   </body>
 </html>
