--- a/box-office.html
+++ b/box-office.html
@@ -2,8 +2,7 @@
   <head></head>
   <body>
     <div id="tixtree-wrapper">
-      <!--<script id="tixtree-script" src="https://www.tixtree.com/widgets/tixtree.js" data-type="events" data-id="tixtree"></script>-->
-      <div id="tixtree-wrapper"><script id="tixtree-script" src="https://www.tixtree.com/widgets/tixtree.js" data-type="events" data-id="earthfest"></script></div>
+      <script id="tixtree-script" src="https://www.tixtree.com/widgets/tixtree.js" data-type="events" data-id="tixtree"></script>
     </div>
   </body>
 </html>
