--- a/box-office.html
+++ b/box-office.html
@@ -1,8 +1,6 @@
 <html>
   <head></head>
   <body>
-    <div id="tixtree-wrapper">
-      <script id="tixtree-script" src="https://www.tixtree.com/widgets/tixtree.js" data-type="events" data-id="tixtree"></script>
-    </div>
+    <div id="tixtree-wrapper"><script id="tixtree-script" src="https://www.tixtree.com/widgets/tixtree.js" data-type="events" data-id="gnezdotoart"></script></div>
   </body>
 </html>
