--- a/event.html
+++ b/event.html
@@ -8,6 +8,7 @@
         data-type="event"
         data-id="party-like-theres-no-tomorrow-cf15cce2d873"
         data-style="sharp"
+        data-embed="page"
       ></script>
     </div>
   </body>
